# pkg/apiclient/rollout/rollout.swagger.json
@@ -4,12 +4,8 @@
     "title": "pkg/apiclient/rollout/rollout.proto",
     "version": "version not set"
   },
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
   "paths": {
     "/api/v1/namespace": {
       "get": {
@@ -28,9 +24,7 @@
             }
           }
         },
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/info": {
@@ -58,9 +52,7 @@
             "type": "string"
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/info/watch": {
@@ -97,9 +89,7 @@
             "type": "string"
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/abort": {
@@ -141,9 +131,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/info": {
@@ -177,9 +165,7 @@
             "type": "string"
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/info/watch": {
@@ -222,9 +208,7 @@
             "type": "string"
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/promote": {
@@ -266,9 +250,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/restart": {
@@ -310,9 +292,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{name}/retry": {
@@ -354,9 +334,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{rollout}/set/{container}/{image}/{tag}": {
@@ -416,9 +394,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/rollouts/{namespace}/{rollout}/undo/{revision}": {
@@ -467,9 +443,7 @@
             }
           }
         ],
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     },
     "/api/v1/version": {
@@ -489,9 +463,7 @@
             }
           }
         },
-        "tags": [
-          "RolloutService"
-        ]
+        "tags": ["RolloutService"]
       }
     }
   },
@@ -1100,6 +1072,19 @@
       },
       "title": "ObjectRef holds a references to the Kubernetes object"
     },
+    "github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.OpenshiftTrafficRouting": {
+      "type": "object",
+      "properties": {
+        "routes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Openshift route definition"
+        }
+      },
+      "title": "OpenshiftTrafficRouting defines the configuration required to use Openshift routes for traffic"
+    },
     "github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.PauseCondition": {
       "type": "object",
       "properties": {
@@ -1616,6 +1601,10 @@
             "$ref": "#/definitions/github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.MangedRoutes"
           },
           "description": "A list of HTTP routes that Argo Rollouts manages, the order of this array also becomes the precedence in the upstream\ntraffic router."
+        },
+        "openshift": {
+          "$ref": "#/definitions/github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.OpenshiftTrafficRouting",
+          "title": "Openshift holds specific configuration to use routes for traffic"
         },
         "apisix": {
           "$ref": "#/definitions/github.com.argoproj.argo_rollouts.pkg.apis.rollouts.v1alpha1.ApisixTrafficRouting",
