# rollout/controller.go
@@ -12,6 +12,10 @@ import (
 	"k8s.io/apimachinery/pkg/runtime/schema"
 
 	"github.com/argoproj/argo-rollouts/pkg/apis/rollouts"
+
+	routev1 "github.com/openshift/api/route/v1"
+	openshiftclientset "github.com/openshift/client-go/route/clientset/versioned"
+
 	smiclientset "github.com/servicemeshinterface/smi-sdk-go/pkg/gen/client/split/clientset/versioned"
 	log "github.com/sirupsen/logrus"
 	appsv1 "k8s.io/api/apps/v1"
@@ -94,6 +98,7 @@ type ControllerConfig struct {
 	DynamicClientSet                dynamic.Interface
 	RefResolver                     TemplateRefResolver
 	SmiClientSet                    smiclientset.Interface
+	OpenshiftClientSet              openshiftclientset.Interface
 	ExperimentInformer              informers.ExperimentInformer
 	AnalysisRunInformer             informers.AnalysisRunInformer
 	AnalysisTemplateInformer        informers.AnalysisTemplateInformer
@@ -122,8 +127,9 @@ type reconcilerBase struct {
 	argoprojclientset clientset.Interface
 	// dynamicclientset is a dynamic clientset for interacting with unstructured resources.
 	// It is used to interact with TrafficRouting resources
-	dynamicclientset dynamic.Interface
-	smiclientset     smiclientset.Interface
+	dynamicclientset   dynamic.Interface
+	openshiftclientset openshiftclientset.Interface
+	smiclientset       smiclientset.Interface
 
 	refResolver TemplateRefResolver
 
@@ -591,6 +597,12 @@ func (c *rolloutContext) getRolloutReferencedResources() (*validation.Referenced
 	}
 	refResources.AppMeshResources = appmeshResources
 
+	openshiftRoutes, err := c.getOpenshiftRoutes()
+	if err != nil {
+		return nil, err
+	}
+	refResources.OpenshiftRoutes = openshiftRoutes
+
 	return &refResources, nil
 }
 
@@ -626,6 +638,35 @@ func (c *rolloutContext) getReferencedAppMeshResources() ([]unstructured.Unstruc
 		}
 	}
 	return refResources, nil
+}
+
+func (c *rolloutContext) getOpenshiftRoutes() ([]routev1.Route, error) {
+	routes := []routev1.Route{}
+	if c.rollout.Spec.Strategy.Canary != nil {
+		canary := c.rollout.Spec.Strategy.Canary
+		if canary.TrafficRouting != nil && canary.TrafficRouting.Openshift != nil {
+			a := canary.TrafficRouting.Openshift
+			fldPath := field.NewPath("spec", "strategy", "canary", "trafficRouting", "openshift", "routes")
+			if len(a.Routes) == 0 {
+				return nil, field.Invalid(fldPath, nil, "must provide at least one route")
+			}
+			for _, routeName := range a.Routes {
+
+				c.openshiftclientset.RouteV1()
+				route, err := c.openshiftclientset.RouteV1().
+					Routes(c.rollout.GetNamespace()).
+					Get(context.Background(), routeName, metav1.GetOptions{})
+				if err != nil {
+					if k8serrors.IsNotFound(err) {
+						return nil, field.Invalid(fldPath, routeName, err.Error())
+					}
+					return nil, err
+				}
+				routes = append(routes, *route)
+			}
+		}
+	}
+	return routes, nil
 }
 
 func (c *rolloutContext) getAmbassadorMappings() ([]unstructured.Unstructured, error) {
